# GPA

./: AndersenPointerAnalysis.cpp  CMakeLists.txt  ConstraintGraph.h  Constraints.cpp  Constraints.h  LlvmParser.cpp  LlvmParser.h  PointerAnalysis.h  README.md  SSABuilder.cpp  SSABuilder.h  Tree.h  draw.py  file.data  graph.gpickle  interSwap-initialPtg.txt  interSwap-nodeId2MrId.txt  interSwap-nodeId2RelatedMrId.txt  interSwap-reversed.out  interSwap.out  leela_r-initialPtg.txt  leela_r-nodeId2RelatedMrId.txt  leela_r-reversed.out  leela_r.out  main.cpp  pretty_graph  weakUpdate-initialPtg.txt  weakUpdate-nodeId2MrId.txt  weakUpdate-nodeId2RelatedMrId.txt  weakUpdate-reversed.out  weakUpdate.out
src/: PointsToGraph.cpp  PointsToGraph.h  Utils.cuh  gpa.cu  gpa.cuh  main.cpp  programl.cpp  programl.h  sbv.cpp  sbv.h  sbv_gpu.cu  sbv_gpu.cuh
tests/misc/: interSwap-O1.ll  interSwap.c  interSwap.ll  test.bc
